test/error/syntax/err1.rzy


component
  Err1
    input
      in();
      
    output
      out();
    
  implementation elementary
    
    function in()
      out.foo();      // .foo does not exist
    end
    
  end

